k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: minishopapp
  namespace: minishop-dev

spec:
  replicas: 3
  revisionHistoryLimit: 10

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: minishopapp

  template:
    metadata:
      labels:
        app: minishopapp

    spec:
      terminationGracePeriodSeconds: 30

      containers:
      - name: minishopapp
        image: dineshvit11/minishopapp:v1.0.0
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        startupProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3

        volumeMounts:
        - name: app-storage
          mountPath: /app/data

      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: minishop-pvc
