k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: minishopapp-service
  namespace: minishop-dev

spec:
  type: NodePort

  selector:
    app: minishopapp

  ports:
  - port: 80
    targetPort: 80
